# sleep-manager

./: .gitignore  AGENTS.md  DEPLOYMENT.md  LICENSE  QUICK_REFERENCE.md  README.md  SYSTEM_REQUIREMENTS.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: build-deb.yml  ci.yml  docs.yml
config/: sleep-manager-config.json  sleep-manager-config.json.example  sleep-manager-config.toml.example
debian/: conffiles  control  postinst  postrm  rules  sleep-manager.conffiles  sleep-manager.install  sleep-manager.sleeper.service  sleep-manager.sudoers  sleep-manager.waker.service
docs/: conf.py  configuration.rst  homebridge.rst  index.rst  installation.rst  operations.rst  quickstart.rst  troubleshooting.rst
docs/api/: core.rst  errors.rst  examples.rst  index.rst  sleeper.rst  waker.rst
homebridge-sleep-manager/: README.md  config-separate-switches.json  config.json  config.schema.json  index.js  package.json
nginx/: sleep-manager
scripts/: build-deb.sh  build-docs.sh  migrate_config.py  migrate_toml_config.py  run-tests.sh  setup-system.sh
sleep-manager/: __init__.py  sleeper.py  waker.py
sleep-manager/config/: sleep-manager-config.json
sleep_manager/: __init__.py  config_checksum.py  core.py  sleeper.py  state_machine.py  waker.py
sleep_manager/config/: sleep-manager-config.json
systemd/: sleep-manager-delay.service  sleep-manager-sleeper.service  sleep-manager-waker.service  sleep-manager.service
tests/: __init__.py  conftest.py  test_app_config.py  test_config_checksum.py  test_gunicorn.py  test_integration.py  test_migrate_config.py  test_migrate_toml_config.py  test_role_resolution.py  test_sleeper.py  test_state_machine.py  test_waker.py
