[build-system]
requires = ["hatchling>=1.25", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "sleep-manager"
dynamic = ["version"]
description = "A Flask application for managing sleep/wake cycles between machines"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "BSD-2-Clause"}
authors = [
    {name = "Sleep Manager Team", email = "team@sleep-manager.example"}
]
keywords = ["flask", "wake-on-lan", "systemd", "sleep", "management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

dependencies = [
    "flask>=2.3.0",
    "gunicorn>=22.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "ty>=0.0.5",
    "tox>=4.14.0",
    "tox-uv>=1.11.0",
    "pip>=24.2",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "myst-parser>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "ty>=0.0.5",
    "tox>=4.14.0",
    "tox-uv>=1.11.0",
    "pip>=24.2",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "myst-parser>=2.0.0",
]

[project.scripts]
sleep-manager = "sleep_manager:create_app"

[project.urls]
Homepage = "https://hgonzale.github.io/sleep-manager"
Repository = "https://github.com/hgonzale/sleep-manager"
Bug-Tracker = "https://github.com/hgonzale/sleep-manager/issues"

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"

[tool.hatch.version]
source = "vcs"
tag-pattern = "^v(?P<version>\\d+\\.\\d+\\.\\d+)$"
fallback-version = "0.0.0"

[tool.hatch.version.raw-options]
git_describe_command = "git describe --dirty --tags --long --match v[0-9]*"

[tool.hatch.build.targets.wheel]
packages = ["sleep_manager"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=sleep_manager",
    "--cov-fail-under=85",
]
filterwarnings = [
    "ignore:urllib3.*doesn't match a supported version:Warning",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "gunicorn: Gunicorn smoke tests",
    "slow: Slow running tests",
]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
]
ignore = [
    "E203",
]

[tool.ruff.lint.isort]
known-first-party = ["sleep_manager"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ty.environment]
python-version = "3.11"
